# easy-password-manager

./: .gitignore  CMakeLists.txt  crypto.c  encrypt.c  file.c  input.c  main.c  main.h  readme.md  test.c
include/: crypto.h  file.h  input.h  main.h
scripts/: read-data.py
src/crypto/: crypto.c
src/file/: basics.c  man.c  mod.c
src/input/: input.c
tests/: main.c
